Use a hidden image toggle icon to fix spacing issues

--- a/app/assets/stylesheets/_chosen_list_item.scss
+++ b/app/assets/stylesheets/_chosen_list_item.scss
@@ -29,6 +29,10 @@
     }
   }
 
+  .hidden-image-toggle-wrapper i {
+    visibility: hidden;
+  }
+
   .icon-images-shown {
     color: #3d99f6;
   }
